--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Aplicação JS</title>
-        </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <script src="script.js"></script>
