criacao dos comandos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         </title>
     </head>
     <body>
-    <script src="script.js"></script>
+        <script src="script_funcoes.js"></script>
+        <script src="script_variaveis-numericos.js"></script>
     </body>
 </html>
