--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Aplicação JS</title>
-        </title>
+        <title>Notebook JS</title>
     </head>
     <body>
         <script src="script_funcoes.js"></script>
         <script src="script_variaveis-numericos.js"></script>
+        <script src="script_condicionais.js"></script>
     </body>
 </html>
