--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
     <head>
-        <title>Aplicação JS</title>
+        <title>Notebook JS + React</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+
+        </header>
+
         <script src="script_funcoes.js"></script>
         <script src="script_variaveis-numericos.js"></script>
         <script src="script_condicionais.js"></script>
     </body>
+    <footer>
+        Development by &copy Marco Pinho
+    </footer>
 </html>
