alt para padrao

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <title>Notebook JS + React</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
 
         </header>
 
-        <script src="script_funcoes.js"></script>
-        <script src="script_variaveis-numericos.js"></script>
-        <script src="script_condicionais.js"></script>
+        <script src="scripts/script_condicionais.js"></script>
+        <script src="scripts/script_funcoes.js"></script>
+        <script src="scripts/script_variaveis-numericos.js"></script>
     </body>
     <footer>
         Development by &copy Marco Pinho
