--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </header>
 
         <script src="scripts/script_condicionais.js"></script>
-        <script src="scripts/script_funcoes.js"></script>
+        <script src="scripts/script_funcoes-op_logicos.js"></script>
         <script src="scripts/script_variaveis-numericos.js"></script>
     </body>
     <footer>
