criação de scripts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="scripts/script_condicionais.js"></script>
         <script src="scripts/script_funcoes-op_logicos.js"></script>
         <script src="scripts/script_variaveis-numericos.js"></script>
+        <script src="scripts/script_repeticoes.js"></script>
+        <script src="scripts/script_intervalos.js"></script>
     </body>
     <footer>
         Development by &copy Marco Pinho
