--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <html>
-    <head>
-        <title>Notebook JS + React</title>
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <header>
 
-        </header>
+<head>
+    <title>Notebook JS + React</title>
+    <link rel="stylesheet" href="css/index.css">
+</head>
 
-        <script src="scripts/script_condicionais.js"></script>
-        <script src="scripts/script_funcoes-op_logicos.js"></script>
-        <script src="scripts/script_variaveis-numericos.js"></script>
-        <script src="scripts/script_repeticoes.js"></script>
-        <script src="scripts/script_intervalos.js"></script>
-    </body>
-    <footer>
-        Development by &copy Marco Pinho
-    </footer>
+<body>
+    <header>
+
+    </header>
+    <div id="app">
+        <input type="text" name="nome">
+        <button class="botao">Adicionar</button>
+        <br>
+    </div>
+
+    <div class="box">
+       <p>JS</p>
+    </div>
+    <script src="scripts/script_funcoes-op_logicos-condicionais.js"></script>
+    <script src="scripts/script_variaveis-numericos.js"></script>
+    <script src="scripts/script_repeticoes.js"></script>
+    <script src="scripts/script_intervalos.js"></script>
+    <script src="scripts/script_adicionar_remover_estilos-dos-Elements.js"></script>
+    <br>
+</body>
+<footer id="foot">
+   
+</footer>
+Development by &copy Marco Pinho
 </html>
