--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 
     </header>
     <div id="app">
-        <input type="text" name="nome">
+       <input type="text" name="nome">
         <button class="botao">Adicionar</button>
         <br>
-    </div>
 
+        <ul></ul>
+        
+        <input type="text" placeholder="Digite um to-do" id="to_do">
+        <button id="btnAdicionar">Adicionar</button>
+        <br>
+    </div>
+<br>
     <div class="box">
        <p>JS</p>
     </div>
@@ -23,6 +29,7 @@
     <script src="scripts/script_repeticoes.js"></script>
     <script src="scripts/script_intervalos.js"></script>
     <script src="scripts/script_adicionar_remover_estilos-dos-Elements.js"></script>
+    <script src="scripts/to_dos.js"></script>
     <br>
 </body>
 <footer id="foot">
