--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <ul></ul>
         
-        <input type="text" placeholder="Digite um to-do" id="to_do">
+        <input type="text" placeholder="Digite um todo" id="todo">
         <button id="btnAdicionar">Adicionar</button>
         <br>
     </div>
@@ -24,12 +24,14 @@
     <div class="box">
        <p>JS</p>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="scripts/script_funcoes-op_logicos-condicionais.js"></script>
     <script src="scripts/script_variaveis-numericos.js"></script>
     <script src="scripts/script_repeticoes.js"></script>
     <script src="scripts/script_intervalos.js"></script>
     <script src="scripts/script_adicionar_remover_estilos-dos-Elements.js"></script>
-    <script src="scripts/to_dos.js"></script>
+    <script src="scripts/todos.js"></script>
+    <script src="scripts/main.js"></script>
     <br>
 </body>
 <footer id="foot">
